Fiyat teklifi düzenlendi,sözleşmler  eklendi.
